# virtual_casing_jax

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: vmec_extender_smoke_benchmark.py
docs/: api.rst  benchmarks.rst  conf.py  differentiability.rst  equations.rst  exterior_field_api.rst  functional.rst  gradb.rst  implementation.rst  index.rst  numerics.rst  offsurface.rst  overview.rst  parity_datasets.rst  performance.rst  references.rst  testdata.rst  using_simsopt.rst  validation.rst  vmec_extender.rst
examples/: README.md  rotating_ellipse_external_B.py  simsopt_single_stage_optimization_finite_beta.py  simsopt_stage_two_optimization_finite_beta.py  testdata_phi_grid.py  vmec_extender_python_api.py  w7x_external_B.py  w7x_gradB.py
tests/: dump_io.py  test_autodiff_gradb_parity.py  test_chunk_blocking.py  test_exterior_field_branch_sign.py  test_exterior_field_cylindrical.py  test_exterior_field_gradients.py  test_exterior_field_grid_export.py  test_exterior_field_wrapper.py  test_exterior_objectives.py  test_external_extender_benchmark.py  test_external_fieldline_benchmark.py  test_external_simsopt_benchmark.py  test_functional_api.py  test_geom_assets.py  test_integrals_direct_numerics.py  test_integrals_parity.py  test_kernels.py  test_offsurface_adaptive_schedule.py  test_simsopt_virtual_casing.py  test_surface_geometry_parity.py  test_surface_ops_basic.py  test_surface_ops_parity.py  test_testdata_parity.py  test_utils.py  test_virtual_casing_class_paths.py  test_virtual_casing_computeB_parity.py  test_virtual_casing_computeBint_parity.py  (+7 more)
(+99 files in other folders)
