[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_casing_jax"
version = "0.0.1"
description = "JAX implementation of the virtual casing principle with high-order quadrature"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "UW Plasma"},
]
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "scipy",
]

[tool.setuptools]
packages = ["virtual_casing_jax"]
