[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual_casing_jax"
version = "0.0.1"
description = "JAX implementation of the virtual casing principle with high-order quadrature"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "UW Plasma"},
]
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "scipy",
]

[tool.setuptools.packages.find]
include = ["virtual_casing_jax*"]

[tool.setuptools.package-data]
virtual_casing_jax = ["geom/*.npz"]

[tool.pytest.ini_options]
markers = [
  "large: large parity datasets (longer runtime)",
]
